--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,95 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+div.button5{
+  display:inline-block;
+  padding:0.46em 1.6em;
+  border:0.1em solid #ffffff;
+  margin:0 0.2em 0.2em 0;
+  border-radius:0.12em;
+  box-sizing: border-box;
+  text-decoration:none;
+  font-family:'Roboto',sans-serif;
+  font-weight:300;
+  color:#FFFFFF !important;
+  text-shadow: 0 0.04em 0.04em rgba(0,0,0,0.35);
+  background-color:#FFFFFF;
+  text-align:center;
+  transition: all 0.15s;
+}
+
+div.button5:hover{
+  text-shadow: 0 0 2em rgba(255,255,255,1);
+  color:#FFFFFF;
+  border-color:#FFFFFF;
+}
+
+@media all and (max-width:30em){
+    a.button5{
+      display: block;
+      margin: 0.4em auto;
+    }
+}
+
+.btn{
+  background: none;
+  border: 2px solid #000;
+  border-radius: 10px;
+  text-transform: uppercase;
+  padding: 12px 20px;
+  min-width: 200px;
+  margin: 10px;
+  cursor: pointer;
+  transition: color 0.4s linear;
+  overflow: hidden;
+  position: relative;
+}
+
+.btn:hover{
+  color: #FFF;
+}
+
+.btn::before{
+  content: "";
+  left: 0;
+  top: 0;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #000;
+  z-index: -1;
+  transform-origin: 0 0;
+  transition: transform 0.5s;
+  transition-timing-function: cubic-bezier(0.5, 1.6, 0.4, 0.7) ;
+}
+
+.downloadButton::before {
+  transform: scaleY(0);
+}
+
+.downloadButton:hover::before {
+  transform: scaleY(1);
+}
+
+/* .downloadButton::after {
+  content: '';
+  left: 0px;
+  bottom: 0px;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #FFFFFF;
+  z-index: -1;
+  transform: translate(0, 100%);
+  transition: all .5s ease;
+} */
+
+
